tried to fix popup position on mobile but still not fully working

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -673,7 +673,6 @@ height: 620px;
 
   #popup p {
     font-size: 1.5em;
-    line-break: normal;
     padding-left: 2%;
   }
 
@@ -697,18 +696,20 @@ height: 620px;
   }
 
   #map-controls {
-    display: none;
-    
+    top: 1%;
+    left: 50%;
+    font-size: 1em;
   }
 
   #popup {
     margin: 0;
     padding: 0.5%;
-    width: 190px;
+    width: 170px;
+    padding-left: 10%;
   }
 
   #popup audio {
-    width: 170px;
+    width: 150px;
     padding-left: 4%;
   }
 
@@ -721,7 +722,6 @@ height: 620px;
     font-size: 1.3em;
     padding-left: 5%;
     padding-right: 2%;
-    line-break: anywhere;
 
   }
 
